# online-test

./: .gitignore  bun.lockb  jest.config.ts  locustfile.py  locustfile2.py  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
app-server/: .env  Cargo.toml
app-server/src/: main.rs  models.rs  services.rs
app-server/src/models/: mcq.rs  question.rs  test.rs  user.rs
app-server/src/services/: questions.rs  tests.rs  users.rs
prisma/: schema.prisma
src/: auth.js  auth.ts
src/actions/: login.js  questions.js  questions.ts  results.js  results.ts  test-answers.js  test-answers.ts  tests.js  tests.ts  users.js  users.ts
src/app/: layout.js  layout.jsx  layout.tsx  loading.js  loading.jsx  navigation-bar.js  page.js  page.jsx  page.tsx
src/app/(auth)/: layout.js  layout.jsx  layout.tsx
src/app/(auth)/login/: login-form.js  login-form.jsx  page.js  (+2 more)
src/app/(protected)/: custom-navbar.jsx  custom-navbar.tsx  layout.js  layout.jsx  layout.tsx
src/components/: providers.jsx  submit-button.js  submit-button.jsx  submit-button.tsx
src/lib/: login.ts  questions.ts  tests.ts  users.ts
src/libs/: judge.js  judge.ts
web-app/: .env  bun.lockb  package-lock.json  package.json
web-app/src/: middleware.ts
web-app/src/app/: layout.tsx  page.tsx
web-app/src/components/: card-example.tsx  choices.tsx  create-question-form.tsx  datagrid-example.tsx  delete-question-dialog.tsx  dropdown-example.tsx  edit-question-dialog.tsx  header.tsx  mcq.tsx  question-detail-dialog.tsx  question-form.tsx  question-table.tsx  short-answer.tsx
(+152 files in other folders)
