[package]
name = "app-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-web-httpauth = "0.8.1"
argon2 = "0.5.2"
bson = { version = "2.7.0", features = ["chrono-0_4"] }
chrono = "0.4.31"
dotenvy = "0.15.7"
futures = "0.3.29"
jsonwebtoken = "9.1.0"
mongodb = "2.7.1"
serde = "1.0.192"
tokio = { version = "1.34.0", features = ["full"] }
